--- a/apps/customer-pwa/public/locales/en/translation.json
+++ b/apps/customer-pwa/public/locales/en/translation.json
@@ -8,6 +8,25 @@
     }
   },
   "profile": {
+    "title": "Profile Settings",
+    "description": "Manage your account details",
+    "personalInfo": {
+      "title": "Personal Information",
+      "fullName": "Full Name",
+      "fullNamePlaceholder": "Enter your full name",
+      "fullNameRequired": "Full name is required",
+      "email": "Email",
+      "emailPlaceholder": "you@email.com",
+      "saveChanges": "Save Changes",
+      "updateSuccess": "Profile updated successfully!",
+      "updateError": "Failed to update profile: ",
+      "loadError": "Error loading profile"
+    },
+    "security": {
+      "title": "Security",
+      "description": "Manage your password",
+      "changePassword": "Change Password"
+    },
     "preferences": "Preferences",
     "prefsDescription": "Configure your language and theme",
     "setLanguage": "Language",
@@ -55,6 +74,12 @@
       "open": "Open",
       "schedule": "Scheduled",
       "closed": "Closed"
+    },
+    "list": {
+      "all": "All",
+      "near": "Stores near",
+      "noStores": "No stores found delivering to",
+      "inCategory": "in"
     }
   },
   "navigation": {
@@ -66,13 +91,45 @@
     "setlocation": "Set Location"
   },
   "auth": {
-    "login": "Login",
-    "signup": "Sign Up",
-    "logout": "Logout"
+    "login": {
+      "title": "Log In",
+      "description": "Log in to access your account",
+      "button": "Log In",
+      "haveAccount": "Already have an account?"
+    },
+    "signup": {
+      "title": "Sign Up",
+      "description": "Create an account to get started",
+      "button": "Sign Up",
+      "noAccount": "Don't have an account?"
+    },
+    "form": {
+      "email": "Email",
+      "emailPlaceholder": "you@example.com",
+      "password": "Password",
+      "processing": "Processing..."
+    },
+    "oauth": {
+      "continueWith": "Or continue with",
+      "google": "Google",
+      "phone": "Phone (OTP)"
+    },
+    "messages": {
+      "verificationNeeded": "Signup successful, but user needs verification. Please check your email.",
+      "signupSuccess": "Signup successful! You are now logged in.",
+      "checkEmail": "Signup successful! Please check your email to verify your account.",
+      "loginSuccess": "Login successful!",
+      "unexpectedError": "An unexpected error occurred.",
+      "oauthError": "Failed to sign in with"
+    },
+    "logout": "Log Out"
   },
   "common": {
     "loading": "Loading...",
+    "saving": "Saving...",
     "edit": "Edit",
-    "delete": "Delete"
+    "delete": "Delete",
+    "hi": "Hi",
+    "search": "Search stores or products..."
   }
 } 
