refactor(i18n): remove i18n package and update translations
- Deleted the i18n package, including its configuration, types, and translation files, to streamline the project structure.
- Updated translation JSON files for English and Spanish to reflect new content and improved phrasing.
- Enhanced landing page translations for better user engagement and clarity.
- Removed unnecessary dependencies related to the i18n package from package.json and pnpm-lock.yaml.

--- a/apps/customer-pwa/public/locales/en/translation.json
+++ b/apps/customer-pwa/public/locales/en/translation.json
@@ -1,10 +1,11 @@
 {
   "landing": {
+    "login": "Login",
     "signup": "Sign up",
     "hero": {
-      "title": "Your favorite store just a click away",
-      "subtitle": "Discover a new way to shop online with fast and secure deliveries",
-      "cta": "Get started"
+      "title": "Your favorite stores, delivered to your door",
+      "subtitle": "Get everything you need from local stores delivered in minutes",
+      "cta": "Start shopping"
     }
   },
   "profile": {
