feat(i18n): update translation management and enhance i18n rule
- Updated pnpm-lock.yaml to reflect new versions of TypeScript and ESLint dependencies.
- Added a new rule for adding translation keys in the i18n package, including detailed instructions for implementation.
- Enhanced the i18n package by adding English and Spanish translation documentation.
- Updated package.json files to include new dependencies and scripts for validation and cleaning.
- Removed debug logs from i18n initialization to streamline the code.

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/i18n",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -15,10 +16,12 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "clean": "rimraf .turbo node_modules dist"
+    "clean": "rimraf .turbo node_modules dist",
+    "validate": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/node": "^20.11.0",
     "tsup": "^8.0.2",
     "typescript": "^5.3.3"
   }
-} 
+}
