feat(customer-pwa): update dependencies and enhance address management
- Added '@repo/i18n' package to pnpm-lock.yaml and updated related paths in tsconfig.base.json.
- Refactored package.json files to update various dependencies, including '@tanstack/react-query', 'lucide-react', 'react-i18next', and 'react-router-dom' to their latest versions.
- Improved address management by integrating new API functions for adding and updating addresses, ensuring local state updates correctly.
- Streamlined imports across components to enhance maintainability and reduce redundancy.
- Removed unused hooks and optimized address store management for better performance.

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -11,10 +11,15 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./locales/*": {
+      "import": "./dist/locales/*.mjs",
+      "require": "./dist/locales/*.js",
+      "types": "./dist/locales/*.d.ts"
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist --metafile --sourcemap",
     "dev": "tsup --watch",
     "clean": "rimraf .turbo node_modules dist",
     "validate": "tsc --noEmit"
