--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "clean": "rimraf .turbo node_modules dist",
+    "clean": "rimraf .turbo dist",
     "validate": "tsc --noEmit"
   },
   "devDependencies": {
