chore(dependencies): update Vite, React Router, and related packages
- Upgraded `@vitejs/plugin-react` to version 4.2.1 and `vite` to version 4.5.13 for improved performance and compatibility.
- Updated `react-router-dom` to version 7.5.2, enhancing routing capabilities.
- Added `postcss` version 8.4.31 to ensure consistent styling processing across the project.
- Reflected these changes in the `package.json` files of multiple applications and packages, ensuring all dependencies are aligned.
- Cleaned up imports in `DeliveryTimeModal` to remove unused functions from `date-fns`, improving code clarity.

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -21,7 +21,13 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "postcss": "8.4.31",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "4.5.13"
+  },
+  "dependencies": {
+    "react-router-dom": "7.5.2"
   }
 }
